--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </style>
 </head>
 <body>
-  <model-viewer src="/3d/untitled.gltf" ar ar-modes="webxr scene-viewer quick-look" camera-controls poster="poster.webp" shadow-intensity="1" autoplay>
+  <model-viewer src="/untitled.gltf" ar ar-modes="webxr scene-viewer quick-look" camera-controls poster="poster.webp" shadow-intensity="1" autoplay>
     <div class="progress-bar hide" slot="progress-bar">
       <div class="update-bar"></div>
     </div>
