--- a/index.html
+++ b/index.html
@@ -17,11 +17,17 @@
   </style>
 </head>
 <body>
-  <model-viewer src="untitled.gltf" ar ar-modes="webxr scene-viewer quick-look" camera-controls poster="poster.webp" shadow-intensity="1" autoplay>
+  <model-viewer src="untitled.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls poster="poster.webp" shadow-intensity="1" autoplay auto-rotate>
     <div class="progress-bar hide" slot="progress-bar">
-      <div class="update-bar"></div>
+        <div class="update-bar"></div>
     </div>
-    <button slot="ar-button" id="ar-button"></button>
-  </model-viewer>
+    <button slot="ar-button" id="ar-button">
+        View in your space
+    </button>
+    <div id="ar-prompt">
+        <img src="https://modelviewer.dev/shared-assets/icons/hand.png">
+    </div>
+</model-viewer>
+
 </body>
 </html>
