--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </style>
 </head>
 <body>
-  <model-viewer src="untitled.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls poster="poster.webp" shadow-intensity="1" autoplay camera-orbit="-8.814deg 57.95deg 5.865m" field-of-view="19.39deg">
+  <model-viewer src="/untitled.gltf" ar ar-modes="webxr scene-viewer quick-look" camera-controls poster="poster.webp" shadow-intensity="1" autoplay camera-orbit="-8.814deg 57.95deg 5.865m" field-of-view="19.39deg">
   <div class="progress-bar hide" slot="progress-bar">
       <div class="update-bar"></div>
   </div>
