--- a/index.html
+++ b/index.html
@@ -12,20 +12,16 @@
     
     model-viewer {
       width: 100%;
-      height: 120vh;
+      height: 100vh;
     }
   </style>
 </head>
 <body>
-  <model-viewer src="/untitled.gltf" ar ar-modes="webxr scene-viewer quick-look" camera-controls poster="poster.webp" shadow-intensity="1" autoplay camera-orbit="-8.814deg 57.95deg 5.865m" field-of-view="19.39deg">
-  <div class="progress-bar hide" slot="progress-bar">
+  <model-viewer src="untitled.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls poster="poster.webp" shadow-intensity="2" autoplay camera-orbit="-8.814deg 57.95deg 5.865m" field-of-view="19.39deg" exposure="1.08" shadow-softness="0.21">
+    <div class="progress-bar hide" slot="progress-bar">
       <div class="update-bar"></div>
-  </div>
-  <button slot="ar-button" id="ar-button">
-      View in your space
-  </button>
-  <div id="ar-prompt">
-      <img src="https://modelviewer.dev/shared-assets/icons/hand.png">
-  </div></model-viewer>
+    </div>
+    <button slot="ar-button" id="ar-button">View in your space</button>
+  </model-viewer>
 </body>
 </html>
