--- a/index.html
+++ b/index.html
@@ -16,18 +16,10 @@
     }
   </style>
 </head>
-<body>
-  <model-viewer src="3dvaanik.gltf" ar ar-modes="webxr scene-viewer quick-look" camera-controls poster="poster.webp" shadow-intensity="2" autoplay exposure="1.26" camera-orbit="-11.17deg 61.83deg 3.931m" field-of-view="30deg" shadow-softness="0.2">
-    <div class="progress-bar hide" slot="progress-bar">
-        <div class="update-bar"></div>
-    </div>
-    <button slot="ar-button" id="ar-button">
-        View in your space
-    </button>
-    <div id="ar-prompt">
-        <img src="https://modelviewer.dev/shared-assets/icons/hand.png">
-    </div>
+<body><model-viewer src="3dvaanik.gltf" ar ar-modes="webxr scene-viewer quick-look" camera-controls poster="poster.webp" shadow-intensity="2" autoplay exposure="1.26" camera-orbit="-11.17deg 61.83deg 3.931m" field-of-view="30deg" shadow-softness="0.2">
+  <div class="progress-bar hide" slot="progress-bar">
+      <div class="update-bar"></div>
+  </div>
 </model-viewer>
-
 </body>
 </html>
