--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.1.1/model-viewer.min.js"></script>
   <style>
     body {
-      background-color: #121212;
+      background-color: #3329FF;
       margin: 0;
       padding: 0;
     }
